--- a/public/global.css
+++ b/public/global.css
@@ -12,23 +12,32 @@
   --body-color: #5f4b32;
   --bg-color: #f9f1db;
   --bg-color-2: #d9c7ab;
-  --green: #5fb88e;
+  --section-color: var(--body-color);
+  --green: #24AC6C;
   --red: #e46a4e;
   --red-dim: #e4694e71;
 
-  --content-max-width: 1400px;
+  --content-max-width: 1200px;
   --nav-height: 100px;
+  --me-font-size: 20px;
 }
 
 * {
   box-sizing: border-box;
 }
 
+svg {
+  fill: red;
+}
+
 html {
   font-family: var(--body-font);
+  font-size: var(--me-font-size);
   color: var(--body-color);
   background: var(--bg-color);
 }
+
+
 
 nav {
   writing-mode: vertical-rl;
@@ -52,6 +61,7 @@ nav a:visited {
   color: var(--body-color);
   margin: 50px 30px;
   opacity: 0.5;
+  text-decoration: none;
 }
 
 nav a.active {
@@ -88,8 +98,9 @@ h2 {
   font-size: 60px;
 }
 
-a {
-  text-decoration: none;
+a, a:visited {
+  color: var(--section-color);
+  text-decoration: underline dashed;
 }
 
 /* home page */
@@ -103,6 +114,7 @@ section {
   margin: auto;
   padding-left: 50px;
   padding-right: 50px;
+  margin-top: 100px;
   margin-bottom: 200px;
 }
 
@@ -112,65 +124,70 @@ section {
   }
 }
 
-.header-text {
+.me-header__content {
   font-size: 36px;
   font-family: var(--header-font);
 }
 
-.header-text h1 {
+.me-header__content h1 {
   text-transform: uppercase;
   max-width: 400px;
   font-size: 72px;
 }
 
-.header-text ul {
+.me-header__content ul {
   padding: 0;
   list-style-type: none;
   font-weight: 300;
 }
 
-.header-text a {
+.me-header__content a {
   display: flex;
+  text-decoration: none;
   align-items: center;
-  color: var(--green);
   font-weight: bold;
   margin-top: 75px;
 }
 
-.header-text a > img {
+.me-header__content a > img {
   margin-left: 30px;
   animation: float-up-down ease-in-out 2s infinite;
 }
 
-section.header {
-  margin-top: 100px;
-}
-
-section.me-description,
-section.header {
+section.me,
+section.me-header {
   display: grid;
   grid-template-columns: 1fr 1.2fr;
   gap: 150px;
 }
 
 @media (max-width: 1200px) {
-  section.me-description,
-  section.header {
+  section.me,
+  section.me-header {
     gap: 100px;
   }
 }
 
-section.header > img {
+section.me-header > img {
   width: calc(100% + 100px);
   height: auto;
 }
 
-section.me-description {
-  font-size: 20px;
-  margin-top: 100px;
+.me-section-header.social-links a,
+.me-section-header.social-links a:visited {
+  display: flex;
+  margin-bottom: 30px;
+  align-items: center;
+  color: inherit;
 }
 
-section.me-description > .content-header {
+.me-section-header.social-links a > img {
+  width: 30px;
+  height: 30px;
+  margin-right: 20px;
+}
+
+.me-section-header.in-brief {
   display: grid;
   grid-template-areas:
     'header header'
@@ -179,7 +196,7 @@ section.me-description > .content-header {
   grid-template-columns: 50px 1fr;
 }
 
-section.me-description > .content-header > .in-brief-header {
+.me-section-header__in-brief-label {
   grid-area: in-brief;
   font-family: var(--header-font);
   font-weight: bold;
@@ -188,25 +205,25 @@ section.me-description > .content-header > .in-brief-header {
   writing-mode: vertical-lr;
 }
 
-section.me-description > .content-header > ul {
+.me-section-header.in-brief > ul {
   grid-area: description;
   list-style-type: none;
   margin: 0;
   padding-left: 0;
 }
 
-section.me-description > .content-header li {
+.me-section-header.in-brief li {
   margin-bottom: 15px;
 }
 
-section.me-description > .content-header > h2 {
+.me-section-header > h2 {
   grid-area: header;
   position: relative;
   font-size: 72px;
   margin-top: 0;
 }
 
-section.me-description > .content-header > h2:before {
+.me-section-header > h2:before {
   counter-increment: section-number;
   content: counter(section-number);
   background: var(--bg-color-2);
@@ -223,15 +240,16 @@ section.me-description > .content-header > h2:before {
   z-index: -1;
 }
 
-a.image-link {
+a.img-link {
   margin-top: 30px;
+  text-decoration: none;
 }
 
-.image-link .img-container {
+a.img-link > .img-container {
   position: relative;
 }
 
-.image-link .img-container:after {
+a.img-link > .img-container:after {
   content: '';
   position: absolute;
   top: 0;
@@ -260,20 +278,20 @@ a.image-link {
   }
 }
 
-a.image-link .img-container img {
+a.img-link > .img-container > img {
   width: 100%;
   transition: transform 0.5s;
 }
 
-.image-link:hover .img-container img {
+.img-link:hover > .img-container > img {
   transform: translate(20px, -20px);
 }
 
-.image-link:hover .img-container:after {
+.img-link:hover > .img-container:after {
   animation: stripe-anim 3s linear infinite;
 }
 
-a.image-link p {
+a.img-link p {
   margin-top: 50px;
   border: 3px solid var(--section-color);
   color: var(--section-color);
@@ -293,12 +311,12 @@ a.image-link p {
   transition: background-position 0.5s;
 }
 
-a.image-link:hover p {
+a.img-link:hover > p {
   background-position: 0;
   color: var(--bg-color);
 }
 
-a.image-link p:before {
+a.img-link > p:before {
   content: '';
   position: absolute;
   top: 3px;
@@ -311,7 +329,7 @@ a.image-link p:before {
   transform-origin: left;
 }
 
-a.image-link:hover p:before {
+a.img-link:hover > p:before {
   transform: translate(6px, -3px) scaleX(0);
 }
 
