--- a/public/global.css
+++ b/public/global.css
@@ -120,14 +120,14 @@ section {
   margin: auto;
   padding-left: 50px;
   padding-right: 50px;
+  padding-bottom: 200px;
   margin-top: 100px;
-  margin-bottom: 200px;
 }
 
 .line-accents-container {
   max-width: var(--content-max-width);
   margin: auto;
-  margin-top: -300px;
+  margin-top: -100px;
   padding-right: 50px;
   height: 200px;
   position: sticky;
@@ -279,9 +279,23 @@ label.in-brief-switch > input {
   height: 0.5em;
   border-radius: 0.75em;
   border: 4px solid var(--bg-color-2);
-  transition: background-color 0.2s;
+  transition: height 0.2s;
   display: flex;
   align-items: center;
+}
+
+label.in-brief-switch:hover > .in-brief-switch__slider {
+  height: 0.8em;
+  background: repeating-linear-gradient(
+    45deg,
+    var(--bg-color-2) 0,
+    var(--bg-color-2) 25%,
+    transparent 0%,
+    transparent 50%
+  );
+  background-size: 35px 35px;
+  background-position: 0 0;
+  animation: stripe-anim 3s linear infinite;
 }
 
 .in-brief-switch__slider:before {
@@ -314,7 +328,7 @@ input:checked ~ .in-brief-switch__recruiter {
 }
 
 input:checked ~ .in-brief-switch__slider:before {
-  transform: translateX(0.9em);
+  transform: translateX(100%);
 }
 
 #in-brief__recruiter-content {
@@ -411,7 +425,7 @@ a.img-link > .img-container:after {
 
 @keyframes stripe-anim {
   to {
-    background-position: -40px, -40px;
+    background-position: -75px, -75px;
   }
 }
 
