--- a/src/global.css
+++ b/src/global.css
@@ -99,6 +99,12 @@ h2 {
   font-weight: normal;
 }
 
+h3 {
+  font-size: 48px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
 a,
 a:visited {
   color: var(--section-color);
