--- a/src/routes/index/styles.css
+++ b/src/routes/index/styles.css
@@ -1,3 +1,31 @@
+.icon-before:before,
+.icon-after:after {
+  --icon-size: 1.5em;
+  --icon-color: var(--section-color);
+  content: '';
+  mask: var(--icon-source);
+  mask-size: var(--icon-size);
+  height: var(--icon-size);
+  width: var(--icon-size);
+  background-color: var(--icon-color);
+}
+
+.icon__devto {
+  --icon-source: url('/static/icons/devto.svg');
+}
+
+.icon__notion {
+  --icon-source: url('/static/icons/notion.svg');
+}
+
+.icon__arrow-down {
+  --icon-source: url('/static/icons/arrow-down.svg');
+}
+
+.icon__arrow-right {
+  --icon-source: url('/static/icons/arrow-right.svg');
+}
+
 .line-accents-container {
   max-width: var(--content-max-width);
   margin: auto;
@@ -51,6 +79,10 @@
   transform: scaleY(5);
 }
 
+.sub-section {
+  margin-top: 0;
+}
+
 section.me-header {
   height: 100vh;
   min-height: 800px;
@@ -95,7 +127,8 @@ section.me-header > img {
   margin-top: 75px;
 }
 
-.me-header__content a > img {
+.me-header__content a:after {
+  --icon-size: 1em;
   margin-left: 30px;
   animation: float-up-down ease-in-out 2s infinite;
 }
@@ -104,7 +137,7 @@ section.me,
 section.me-header {
   display: grid;
   grid-template-columns: 1fr 1.4fr;
-  gap: 200px;
+  column-gap: 200px;
 }
 
 @media (max-width: 1200px) {
@@ -279,7 +312,7 @@ p > label.in-brief-switch ~ .in-brief__personal-content {
   position: absolute;
   top: 0;
   left: 0;
-  bottom: 0;
+  bottom: 6px;
   right: 0;
   border-left: 10px solid var(--section-color);
   border-bottom: 10px solid var(--section-color);
@@ -316,14 +349,17 @@ p > label.in-brief-switch ~ .in-brief__personal-content {
   animation: stripe-anim 3s linear infinite;
 }
 
-.img-link__text {
-  margin-top: 50px;
+.cta-link {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   border: 3px solid var(--section-color);
   color: var(--section-color);
   font-family: var(--header-font);
   font-weight: bold;
   padding: 10px;
-  position: relative;
+  text-decoration: none;
   background: linear-gradient(
     90deg,
     var(--section-color) 0,
@@ -334,9 +370,11 @@ p > label.in-brief-switch ~ .in-brief__personal-content {
   background-size: 200% 100%;
   background-position: 100% 0;
   transition: background-position 0.5s;
+  margin: 0;
+  margin-top: 50px;
 }
 
-.img-link__text:before {
+.cta-link:before {
   content: '';
   position: absolute;
   top: 3px;
@@ -349,13 +387,32 @@ p > label.in-brief-switch ~ .in-brief__personal-content {
   transform-origin: left;
 }
 
-.img-link:hover > .img-link__text {
+.cta-link:hover,
+.img-link:hover > .cta-link {
   background-position: 0;
   color: var(--bg-color);
 }
 
-.img-link:hover > .img-link__text:before {
+.cta-link:hover:before,
+.img-link:hover > .cta-link:before {
   transform: translate(6px, -3px) scaleX(0);
+}
+
+.cta-link:hover:after,
+.img-link:hover > .cta-link:after {
+  --icon-color: var(--bg-color);
+  transition: background-color 0.1s;
+  transition-delay: 0.3s;
+}
+
+.section-me__grid-header {
+  grid-column: 1 / span 2;
+}
+
+.me-blog-posts-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .me-blog-post,
@@ -412,6 +469,39 @@ p > label.in-brief-switch ~ .in-brief__personal-content {
   font-weight: bold;
   text-align: center;
   margin-bottom: 5px;
+}
+
+.me-headline-blog-post {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.me-headline-blog-post__title {
+  font-size: 36px;
+  font-weight: 600;
+  color: var(--body-color);
+}
+
+.me-headline-blog-post__min-read {
+  position: absolute;
+  bottom: 16px;
+  left: 10px;
+  background: var(--bg-color);
+  padding: 5px 10px;
+  margin: 0;
+  color: var(--body-color);
+  font-family: var(--header-font);
+  font-size: 20px;
+  font-weight: bold;
+
+  display: flex;
+  align-items: center;
+}
+
+.me-headline-blog-post__icon {
+  height: 1.5em;
+  margin-right: 10px;
 }
 
 @keyframes float-up-down {
