add flashing animation to link hover

--- a/src/global.css
+++ b/src/global.css
@@ -111,6 +111,20 @@ a:visited {
   text-decoration: underline dashed;
 }
 
+a:hover {
+  animation: flash 0.4s linear infinite;
+}
+
+@keyframes flash {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+}
+
 .relative {
   position: relative;
 }
