remove unecessary JS checkbox logic

--- a/src/routes/index/page.pug
+++ b/src/routes/index/page.pug
@@ -12,7 +12,7 @@ section.header
     a.icon-after.arrow-down(href="#iteach") More about me
 
 .line-accents-container
-  .inner-container
+  #line-accents
     div
     div
     div
