--- a/src/routes/index/styles.scss
+++ b/src/routes/index/styles.scss
@@ -37,7 +37,7 @@
     display: flex;
     justify-content: center;
 
-    .inner-container {
+    #line-accents {
       display: flex;
       margin-right: 10%;
 
