initial projects section with dice roll animation and dummy project data

--- a/src/routes/global.scss
+++ b/src/routes/global.scss
@@ -16,7 +16,7 @@
   --green: #24ac6c;
   --green-faded: #5fb88e;
   --section-color: var(--green);
-  --purple: #6b56a7;
+  --purple: #7931e3;
   --red: #e46a4e;
   --red-faded: #e07c64;
   --red-dim: #e4694e71;
@@ -137,6 +137,11 @@ h3 {
   font-size: 48px;
   margin-top: 15px;
   margin-bottom: 15px;
+}
+
+h4 {
+  font-size: 36px;
+  margin-bottom: 10px;
 }
 
 a,
